--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -83,7 +83,7 @@
                                             </div>
                                         </ChildContent>
                                         <ActionsContent>
-                                            <SIcon Color="#485585">mdi-chevron-down</SIcon>
+                                            <SIcon Color="#485585" IsDefaultToolTip="false">mdi-chevron-down</SIcon>
                                         </ActionsContent>
                                         </MExpansionPanelHeader>
                                         <MExpansionPanelContent Style="padding-left: 8px;">
@@ -120,7 +120,7 @@
                                                     @if (configObject.IsNeedRebase)
                                                     {
                                                         <SButton Outlined Color="warning" Class="mr-4" OnClick="()=> CloneConfigObjectCoverClick(configObject)">
-                                                            <SIcon>mdi-alert-outline</SIcon>
+                                                            <SIcon IsDefaultToolTip="false">mdi-alert-outline</SIcon>
                                                             @T("Conflict resolution")
                                                         </SButton>
                                                     }
@@ -143,7 +143,7 @@
                                             </div>
                                         </ChildContent>
                                         <ActionsContent>
-                                            <SIcon Color="#485585">mdi-chevron-down</SIcon>
+                                            <SIcon Color="#485585" IsDefaultToolTip="false">mdi-chevron-down</SIcon>
                                         </ActionsContent>
                                         </MExpansionPanelHeader>
                                         <MExpansionPanelContent Style="padding-left: 8px;">
@@ -309,7 +309,7 @@
                                                     @if (configObject.IsNeedRebase)
                                                     {
                                                         <SButton Outlined Color="warning" Class="mr-4" OnClick="()=> CloneConfigObjectCoverClick(configObject)">
-                                                            <SIcon>mdi-alert-outline</SIcon>
+                                                            <SIcon IsDefaultToolTip="false">mdi-alert-outline</SIcon>
                                                             @T("Conflict resolution")
                                                         </SButton>
                                                     }
@@ -332,7 +332,7 @@
                                             </div>
                                         </ChildContent>
                                         <ActionsContent>
-                                            <SIcon Color="#485585">
+                                                    <SIcon Color="#485585" IsDefaultToolTip="false">
                                                 mdi-chevron-down
                                             </SIcon>
                                         </ActionsContent>
@@ -371,7 +371,7 @@
                                                     @if (configObject.IsNeedRebase)
                                                     {
                                                         <SButton Outlined Color="warning" Class="mr-4" OnClick="()=> CloneConfigObjectCoverClick(configObject)">
-                                                            <SIcon>mdi-alert-outline</SIcon>
+                                                            <SIcon IsDefaultToolTip="false">mdi-alert-outline</SIcon>
                                                             @T("Conflict resolution")
                                                         </SButton>
                                                     }
@@ -394,7 +394,7 @@
                                             </div>
                                         </ChildContent>
                                         <ActionsContent>
-                                            <SIcon Color="#485585">
+                                                    <SIcon Color="#485585" IsDefaultToolTip="false">
                                                 mdi-chevron-down
                                             </SIcon>
                                         </ActionsContent>
