--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
@@ -49,7 +49,7 @@
                             </span>
                         </ChildContent>
                         <ActionsContent>
-                            <SIcon Color="#485585">
+                            <SIcon Color="#485585" IsDefaultToolTip="false">
                                 mdi-chevron-down
                             </SIcon>
                         </ActionsContent>
