--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -19,7 +19,7 @@
                                 <ChildContent>
                                     <MList Dense>
                                         <MListItem Dense OnClick="()=>ShowCloneModalAsync()">
-                                            <SIcon Color="#323D6F" Size="20" Class="mr-4">far fa-copy</SIcon>
+                                            <SIcon Color="#323D6F" Size="20" Class="mr-4" IsDefaultToolTip="false">far fa-copy</SIcon>
                                             <MListItemContent>
                                                 <MListItemTitle>@T("Clone config")</MListItemTitle>
                                             </MListItemContent>
@@ -85,7 +85,7 @@
             @if (IsAppConfig)
             {
                 <div @onclick="ShowRelationModal" style="width:100%; color:#323D6F; font-size:14px; position: fixed; right:24px; bottom: 24px;" class="d-flex justify-end hover-pointer">
-                    <SIcon Size="16" Class="mr-1">mdi-link-variant</SIcon>@T("Connect public config")
+                    <SIcon Size="16" Class="mr-1" IsDefaultToolTip="false">mdi-link-variant</SIcon>@T("Connect public config")
                 </div>
             }
         </MNavigationDrawer>
@@ -95,7 +95,7 @@
             <div class="d-flex mb-3">
                 <SSearch @bind-Value="_configObjectName" OnEnter="SearchConfigObject" Height="40" Dense BackgroundColor="#fff" MaxWidth="0" Placeholder="@T("Please enter the config name and press enter to query")" />
                 <SButton Height="40" Width="100" BorderRadiusClass="rounded-lg" Class="ml-6" OnClick="ShowAddConfigObjectModalAsync">
-                    <SIcon Class="mr-1" Small>mdi-plus</SIcon>@T("Add")
+                    <SIcon Class="mr-1" Small IsDefaultToolTip="false">mdi-plus</SIcon>@T("Add")
                 </SButton>
             </div>
             <div class="mt-3" style="overflow:auto;position: relative; @ConfigPanelStyle">
@@ -123,7 +123,7 @@
                                                          RevokeClick="RevokeAsync" />
                                         </ChildContent>
                                         <ActionsContent>
-                                            <SIcon Color="#485585">
+                                            <SIcon Color="#485585" IsDefaultToolTip="false">
                                                 mdi-chevron-down
                                             </SIcon>
                                         </ActionsContent>
@@ -132,7 +132,7 @@
                                         @if (configObject.FromRelation && configObject.RelationConfigObjectId != 0)
                                         {
                                             <div class="mb-2">
-                                                <SIcon Size="18" Color="#7681AB">mdi-link-variant</SIcon>
+                                                <SIcon Size="18" Color="#7681AB" IsDefaultToolTip="false">mdi-link-variant</SIcon>
                                                 <span style="font-size: 14px; color: #7681AB;">
                                                     @T("Connected")
                                                     <span class="regular3--text btn mx-1 font-size: 6px !important;">|</span>
@@ -143,7 +143,7 @@
                                         else if (configObject.FromRelation && configObject.RelationConfigObjectId == 0)
                                         {
                                             <div class="mb-2">
-                                                <SIcon Size="18" Color="#7681AB">mdi-link-variant-off</SIcon>
+                                                <SIcon Size="18" Color="#7681AB" IsDefaultToolTip="false">mdi-link-variant-off</SIcon>
                                                 <span style="font-size: 14px; color: #7681AB;">@T("Covered")</span>
                                             </div>
                                         }
@@ -168,7 +168,7 @@
                                                          RevokeClick="RevokeAsync" />
                                         </ChildContent>
                                         <ActionsContent>
-                                            <SIcon Color="#485585">
+                                            <SIcon Color="#485585" IsDefaultToolTip="false">
                                                 mdi-chevron-down
                                             </SIcon>
                                         </ActionsContent>
@@ -206,7 +206,7 @@
                                                                         color = "#7681AB";
                                                                         text = @T("UnReleased");
                                                                     }
-                                                                    <SIcon Style="margin-bottom:2px;" Class="mr-1" Size="20" Color="@color">@icon</SIcon>
+                                                                    <SIcon Style="margin-bottom:2px;" Class="mr-1" Size="20" Color="@color" IsDefaultToolTip="false">@icon</SIcon>
                                                                     <span style="color: @color;">@text</span>
                                                                     break;
                                                                 case "Operation":
@@ -257,22 +257,22 @@
                                                                             <div class="d-inline-flex m-0 p-0 text-overflow">
                                                                                 @if (context.Item.IsPublished)
                                                                                 {
-                                                                                    <SIcon Class="mr-1" Style="margin-bottom:2px;color: #05CD99 !important;" Size="16">mdi-link-variant</SIcon>
+                                                                                    <SIcon Class="mr-1" Style="margin-bottom:2px;color: #05CD99 !important;" Size="16" IsDefaultToolTip="false">mdi-link-variant</SIcon>
                                                                                     <span class="green--text">@T("Released")</span>
                                                                                 }
                                                                                 else
                                                                                 {
                                                                                     if (context.Item.IsAdded)
                                                                                     {
-                                                                                        <SIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16">mdi-plus</SIcon>
+                                                                                        <SIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16" IsDefaultToolTip="false">mdi-plus</SIcon>
                                                                                     }
                                                                                     else if (context.Item.IsEdited)
                                                                                     {
-                                                                                        <SIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16">mdi-pencil</SIcon>
+                                                                                    <SIcon Class="mr-1" Style="margin-bottom:2px;color:#A3AED0 !important;" Size="16" IsDefaultToolTip="false">mdi-pencil</SIcon>
                                                                                     }
                                                                                     else if (context.Item.IsDeleted)
                                                                                     {
-                                                                                        <SIcon Class="mr-1" Style="margin-bottom:2px;color: #A3AED0 !important;" Size="16">mdi-delete</SIcon>
+                                                                                    <SIcon Class="mr-1" Style="margin-bottom:2px;color: #A3AED0 !important;" Size="16" IsDefaultToolTip="false">mdi-delete</SIcon>
                                                                                     }
                                                                                     <span>@T("UnReleased")</span>
                                                                                 }
@@ -348,7 +348,7 @@
                                                          RevokeClick="RevokeAsync" />
                                         </ChildContent>
                                         <ActionsContent>
-                                            <SIcon Color="#485585">
+                                            <SIcon Color="#485585" IsDefaultToolTip="false">
                                                 mdi-chevron-down
                                             </SIcon>
                                         </ActionsContent>
@@ -357,7 +357,7 @@
                                         @if (configObject.FromRelation && configObject.RelationConfigObjectId != 0)
                                         {
                                             <div class="mb-2">
-                                                <SIcon Size="18" Color="#7681AB">mdi-link-variant</SIcon>
+                                                <SIcon Size="18" Color="#7681AB" IsDefaultToolTip="false">mdi-link-variant</SIcon>
                                                 <span style="font-size: 14px; color: #7681AB;">
                                                     @T("Connected")
                                                     <span class="regular3--text btn mx-1 font-size: 6px !important;">|</span>
@@ -368,7 +368,7 @@
                                         else if (configObject.FromRelation && configObject.RelationConfigObjectId == 0)
                                         {
                                             <div class="mb-2">
-                                                <SIcon Size="18" Color="#7681AB">mdi-link-variant-off</SIcon>
+                                                <SIcon Size="18" Color="#7681AB" IsDefaultToolTip="false">mdi-link-variant-off</SIcon>
                                                 <span style="font-size: 14px; color: #7681AB;">@T("Covered")</span>
                                             </div>
                                         }
