--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -83,12 +83,12 @@
             {
                 if (_isRelation)
                 {
-                    <SIcon Size="18" Color="#7681AB">mdi-link-variant</SIcon>
+                    <SIcon Size="18" Color="#7681AB" IsDefaultToolTip="false">mdi-link-variant</SIcon>
                     <span style="color: #7681AB; font-size: 14px;">@T("Connected")</span>
                 }
                 else
                 {
-                    <SIcon Size="18" Color="#7681AB">mdi-link-variant-off</SIcon>
+                    <SIcon Size="18" Color="#7681AB" IsDefaultToolTip="false">mdi-link-variant-off</SIcon>
                     <span style="color: #7681AB; font-size: 14px;">@T("Covered")</span>
                 }
                 <MTextarea Class="mt-3" Dense Outlined Value="@_selectConfigObject.Content" ValueChanged="value=>ContentValueChanged(value,_selectConfigObject)"></MTextarea>
