fix: blink for environment area in Config.razor

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -45,7 +45,7 @@
                             </MRow>
                         }
                         <MRow NoGutters Class="regular3--text btn mt-6">@T("Environment")</MRow>
-                        <MRow NoGutters>
+                        <div style="width: 100%">
                             <MChipGroup Column>
                                 @foreach (var item in _appEnvs)
                                 {
@@ -61,9 +61,9 @@
                                     </MChip>
                                 }
                             </MChipGroup>
-                        </MRow>
+                        </div>
                         <MRow NoGutters Class="regular3--text btn mt-6">@T("Cluster")</MRow>
-                        <MRow NoGutters>
+                        <div style="width: 100%">
                             <MChipGroup @key="_appClusters" Column>
                                 @foreach (var item in _appClusters)
                                 {
@@ -78,7 +78,7 @@
                                     </MChip>
                                 }
                             </MChipGroup>
-                        </MRow>
+                        </div>
                     </div>
                 </div>
             </div>
