--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/MonacoEditor.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/MonacoEditor.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="pa-2 rounded-5" style="background:#F6F8FD;">
+<div class="pt-4 pb-6 rounded-2" style="background:#F6F8FD;">
     <MMonacoEditor @ref="_editor" Style="min-height: 312px;" Height="Height" Value="@Value" ValueChanged="ValueChanged" InitOptions="InitOptions" />
 </div>
 
