--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -119,6 +119,6 @@
     </MMenu>
     @if (!Disabled)
     {
-        <div class="separator"></div>
+        <MDivider Vertical Class="separator"></MDivider>
     }
 </div>
