feat: add config release show on project list and project details
#559

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -46,7 +46,7 @@
                     }
 
                     <MExpansionPanels Flat Accordion>
-                    @foreach (var configObject in loadConfigObjects().Where(c => !c.FromRelation))
+                    @foreach (var configObject in LoadConfigObjects().Where(c => !c.FromRelation))
                         {
                             var formatLabelCode = configObject.FormatLabelCode.Trim().ToLower();
                             if (formatLabelCode == "properties")
