--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -16,3 +16,4 @@
 @using Masa.Contrib.StackSdks.Config;
 @using Force.DeepCloner;
 @using Masa.Contrib.StackSdks.Caller;
+@using Masa.Dcc.Contracts.Admin;
