--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -842,10 +842,8 @@ textarea:disabled {
     max-width: 240px; 
     overflow: hidden;
 }
-.masa-main .appcard .cardaction {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding-bottom: 12px !important;
-}
+    .masa-main .appcard .cardaction {
+        padding-bottom: 12px !important;
+        align-items: start;
+        flex-direction: column
+    }
