--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
@@ -16,11 +16,23 @@
             <div class="text-overflow regular--text body text-overflow mt-4">@App.Description</div>
         </MCardSubtitle>
         <div class="full-width" @onclick:stopPropagation>
-            <MCardActions Class="px-0 mx-4 cardaction">
+                <MCardActions Class="px-0 mx-4 cardaction">
                 @ChildContent
+                @if (LatestReleaseConfig != null)
+                {
+                    <div class="full-width text-end">
+                        <span class="ml-2 regular3--text body2">@T("LatestReleaseConfig"): </span>
+                        <DateTimeZone Class="regular3--text body2" Value="@LatestReleaseConfig.LastPublishTime"></DateTimeZone>
+                        @if (!string.IsNullOrEmpty(LatestReleaseConfig.LastPublisher))
+                        {
+                            <span class="mx-1 regular3--text body2">|</span>
+                            <span class="regular3--text body2">@LatestReleaseConfig?.LastPublisher </span>
+                        }
+                    </div>
+                }
             </MCardActions>
         </div>
-     </MCard>
+    </MCard>
 </MHover>
 
 @code {
@@ -29,6 +41,9 @@
 
     [Parameter]
     public List<EnvironmentClusterModel> EnvironmentClusters { get; set; } = new();
+
+    [Parameter]
+    public LatestReleaseConfigModel? LatestReleaseConfig { get; set; } = null;
 
     [Parameter]
     public Model.AppModel App { get; set; } = new();
