--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -78,7 +78,7 @@
                     </SButton>
                 </MCardTitle>
                 <div class="regular3--text pl-4 body2 text-overflow">@_bizDetail.Identity</div>
-                <MCardActions Class="pa-0 mx-3" Style="position: absolute; bottom: 16px; right: 0; left: 0;">
+                <MCardActions Class="pa-0 mx-3 pb-4">
                     <MChipGroup @key="_projectEnvClusters" Class="env-cluster-chip-group" ActiveClass="primary--text">
                         @foreach (var item in _projectEnvClusters)
                         {
@@ -89,6 +89,19 @@
                                             ClusterName="@item.ClusterName" />
                         }
                     </MChipGroup>
+                    @{ var bizRelease = _bizLatestReleaseConfig.FirstOrDefault(x => x.ProjectId == _projectDetail.Id); }
+                    @if (bizRelease != null)
+                    {
+                        <div class="full-width text-end">
+                            <span class="ml-2 regular3--text body2">@T("LatestReleaseConfig"): </span>
+                            <DateTimeZone Class="regular3--text body2" Value="@bizRelease.LastPublishTime"></DateTimeZone>
+                            @if (!string.IsNullOrEmpty(bizRelease.LastPublisher))
+                            {
+                                <span class="mx-1 regular3--text body2">|</span>
+                                <span class="regular3--text body2">@bizRelease.LastPublisher </span>
+                            }
+                        </div>
+                    }
                 </MCardActions>
             </MCard>
         </div>
@@ -107,8 +120,11 @@
                     <MRow>
                         @foreach (var app in _apps)
                         {
+                            var appLatest = _appLatestReleaseConfig.FirstOrDefault(x => x.AppId == app.Id);
                             <MCol Lg="4" Md="6" Sm="12">
-                                <AppCard OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                <AppCard 
+                                    OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" Style="border: none;" 
+                                    OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters" LatestReleaseConfig="appLatest">
                                     <MChipGroup @key="app.EnvironmentClusters" Class="env-cluster-chip-group" ActiveClass="primary--text">
                                         @foreach (var item in app.EnvironmentClusters)
                                         {
